--- a/client/src/components/profile/profile.scss
+++ b/client/src/components/profile/profile.scss
@@ -211,7 +211,8 @@ $buttonWidth: 125px;
 .new_project_block {
   position: relative;
   margin-top: 45px;
-  width: 45%;
+  width: 800px;
+  margin-bottom: 50px;
   margin-left: auto;
   margin-right: auto;
   @include testing;
