--- a/client/src/utils.scss
+++ b/client/src/utils.scss
@@ -2,6 +2,22 @@
   border: 1px solid red;
 }
 
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
+
 $midBlue: #3d3b56;
 $darkBlue: #282c35;
 $darkestBlue: #1f2229;
