--- a/client/src/components/initial/initial.scss
+++ b/client/src/components/initial/initial.scss
@@ -22,6 +22,8 @@
 }
 
 .user_input_fields {
+  position: relative;
+  display: inline-block;
   width: 175px;
   height: 25px;
   font-size: 16px;
@@ -41,6 +43,7 @@
 
 .signup_field {
   text-align: center;
+  display: block;
   font-size: 18px;
   @include page_fields;
 }
@@ -72,4 +75,35 @@
   margin-right: auto;
   font-family: "Roboto", sans-serif;
   color: #838383;
+}
+
+.password_hide_comp {
+  position: relative;
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  overflow: none;
+  background-color: white;
+}
+
+.password_hide_button {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+.password_component {
+  position: relative;
+  display: block;
+  width: 220px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.username_component {
+  position: relative;
+  display: block;
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
