Fixed logout system and gave developed way for projects to know whether or not the user is a member on the Open Projects page

--- a/client/src/components/about/about.scss
+++ b/client/src/components/about/about.scss
@@ -9,6 +9,13 @@
   @include testing;
 }
 
+.project_page {
+  position: relative;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .about_sidebar {
   position: fixed;
   width: 10%;
