--- a/client/src/components/profile/profile.scss
+++ b/client/src/components/profile/profile.scss
@@ -371,3 +371,8 @@ $buttonWidth: 125px;
   opacity: 1;
   @include standardTransition;
 }
+
+.friend_request {
+  position: relative;
+  top: 200px;
+}
