Added a counter for when the friend request was sent

--- a/client/src/components/profile/profile.scss
+++ b/client/src/components/profile/profile.scss
@@ -423,3 +423,14 @@ $buttonWidth: 125px;
   vertical-align: middle;
   margin-top: 6px;
 }
+
+.recent_req_header {
+  position: relative;
+  font-size: 26px;
+  text-align: center;
+}
+
+.send_req_info {
+  color: grey;
+  font-size: 16px;
+}
