--- a/client/src/components/homepage/homepage.scss
+++ b/client/src/components/homepage/homepage.scss
@@ -32,19 +32,23 @@
 }
 
 .link_to_person {
-  color: black;
   display: inline-block;
   text-decoration: none;
-  width: 100%;
+  color: white;
+  width: 80%;
+  height: 100%;
+  padding: 10px;
+  border: 1px solid red;
+  box-sizing: border-box;
 }
 
 .person {
   position: relative;
   display: inline-block;
   width: 95%;
-  padding: 10px;
   border-bottom: 1px solid grey;
   cursor: pointer;
+  margin-top: 5px;
   transition: 0.6s;
   color: white;
   opacity: 0.9;
@@ -600,6 +604,9 @@
 .friend_settings {
   position: relative;
   float: right;
+  display: inline-block;
+  width: 20%;
+  box-sizing: border-box;
 }
 
 .start_of_messages {
