Put limit on projects an account can join

--- a/client/src/components/profile/profile.scss
+++ b/client/src/components/profile/profile.scss
@@ -140,6 +140,17 @@
   @include testing;
 }
 
+.full_list_block {
+  text-align: center;
+  @include standardFont;
+}
+
+.project_counter {
+  position: relative;
+  top: 25px;
+  @include standardFont;
+}
+
 .start_project_header {
   color: pink;
   font-size: 22px;
