Added a context menu to the friend selector and refactored task code slightly

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,6 +5,7 @@
 @import "components/navigation/nav";
 @import "components/profile/profile";
 @import "components/projects/projects";
+@import "contextmenus";
 
 body {
   margin: 0;
