Added emojis and contextmenu to the input field

--- a/client/src/components/homepage/homepage.scss
+++ b/client/src/components/homepage/homepage.scss
@@ -752,3 +752,11 @@
   @include fastTransition;
   @include noselect;
 }
+
+.context_menu_icon {
+}
+
+.context_menu_icon_image {
+  height: 30px;
+  width: 30px;
+}
