--- a/client/src/components/profile/profile.scss
+++ b/client/src/components/profile/profile.scss
@@ -445,3 +445,34 @@ $buttonWidth: 125px;
   color: grey;
   font-size: 16px;
 }
+
+.thumbsContainer {
+  display: flex;
+  flexdirection: row;
+  flexwrap: wrap;
+  margintop: 16;
+}
+
+.thumb {
+  display: inline-flex;
+  borderradius: 2;
+  border: 1px solid #eaeaea;
+  marginbottom: 8;
+  marginright: 8;
+  width: 100;
+  height: 100;
+  padding: 4;
+  boxsizing: border-box;
+}
+
+.thumbInner {
+  display: flex;
+  minwidth: 0;
+  overflow: hidden;
+}
+
+.img_block {
+  display: block;
+  width: auto;
+  height: 100%;
+}
