--- a/client/src/components/profile/profile.scss
+++ b/client/src/components/profile/profile.scss
@@ -95,6 +95,7 @@
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
 }
 
 .profile_settings_header {
@@ -475,4 +476,8 @@ $buttonWidth: 125px;
   display: block;
   width: auto;
   height: 100%;
+}
+
+.dropzone_container {
+  border: 1px solid grey;
 }
