--- a/client/src/components/homepage/homepage.scss
+++ b/client/src/components/homepage/homepage.scss
@@ -628,16 +628,40 @@
 .right_align {
   float: right;
   display: inline-block;
-  width: 18%;
-  height: 30px;
+  height: 100%;
+  opacity: 0;
+  @include standardTransition;
+}
+
+.inline_align {
+  display: inline-block;
+}
+
+.edit_icons {
+  display: inline-block;
+  width: 100%;
+  border: 1px solid red;
+}
+
+.edit_icons:hover .menu_button {
+  display: none;
+}
+
+.edit_icons:hover .message_edit_button,
+.edit_icons:hover .message_remove_button {
+  display: inline-block;
+}
+
+.message_edit_button,
+.message_remove_button {
+  position: relative;
+  height: 100%;
+  display: none;
+  cursor: pointer;
 }
 
 .message_edit_button {
-  position: relative;
-  margin-right: 10px;
-  height: 100%;
-  width: 100%;
-  cursor: pointer;
+  margin-left: 5px;
 }
 
 .message {
@@ -649,10 +673,11 @@
 }
 
 .edit_image {
-  height: 15px;
-  width: 15px;
+  height: 20px;
+  width: 20px;
   border-radius: 50%;
   padding: 2.5px;
+  border: 1px solid yellow;
   transition: 0.2s;
 }
 
@@ -664,7 +689,7 @@
 .individual_message {
   position: relative;
   width: 80%;
-  padding: 10px;
+  padding: 15px;
   border-radius: 5px;
   margin-left: auto;
   margin-right: auto;
@@ -673,8 +698,14 @@
   background-color: #6f6b9b;
 }
 
+.individual_message:hover .right_align {
+  opacity: 1;
+  @include fastTransition;
+}
+
 .message_timestamp {
   position: relative;
+  display: block;
   vertical-align: top;
 }
 
