--- a/client/src/components/initial/initial.scss
+++ b/client/src/components/initial/initial.scss
@@ -1,16 +1,39 @@
 @import "../../utils";
 
 .account_creation_block {
-  display: flex;
-  justify-content: center;
-  height: 90vh;
+  height: 100vh;
   width: 100%;
   @include testing;
 }
 
 .account_creation {
-  align-self: center;
+  position: fixed;
+  top: 20%;
+  width: 40%;
+  height: 100%;
+  display: inline-block;
+  box-sizing: border-box;
   @include testing2;
+}
+
+.account_inputs {
+  align-self: center;
+  height: auto;
+  @include testing;
+}
+
+.about_saturnia {
+  position: relative;
+  display: block;
+  width: 60%;
+  float: right;
+  top: 0;
+  @include testing;
+  box-sizing: border-box;
+}
+
+.margin_top_block {
+  margin-top: 50px;
 }
 
 .userform {
