--- a/client/src/components/projects/projects.scss
+++ b/client/src/components/projects/projects.scss
@@ -78,3 +78,12 @@
   font-size: 22px;
   text-align: center;
 }
+
+.project_page {
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid grey;
+}
